--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@
     font-family: "Montserrat";
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: auto;
+}
+
 header {
     background-color: #0ea5e9;
     height: 3rem;
@@ -54,4 +63,85 @@ main {
 
 .description li {
     padding-bottom: 0.25rem;
+}
+
+.add-btn,
+.add-book-form button {
+    font-size: 1rem;
+    padding: 0.5rem 0.75rem;
+    border-radius: 1rem;
+    border-style: none;
+    background-color: #0ea5e9;
+    color: #FFFFFF;
+    font-weight: 600;
+}
+
+.add-book-form {
+    display: none;
+    flex-direction: column;
+    width: 250px;
+    padding: 1rem;
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    border-radius: 0.5rem;
+    background-color: #FFFFFF;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.checkbox {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.add-book-form label {
+    margin-bottom: 0.25rem;
+    font-size: 1rem;
+}
+
+.add-book-form input {
+    margin-bottom: 0.5rem;
+    border-radius: 3px;
+    border-color: #E5E7EB;
+    border-style: solid;
+    border-width: 1px;
+    box-sizing: border-box;
+    font-size: 1rem;
+    padding: 0.125rem 0.5rem;
+}
+
+#read {
+    margin-bottom: 0.125rem;
+}
+
+.add-book-form button {
+    margin-top: 1rem;
+    align-self: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.active {
+    display: block;
+}
+
+.add-book-form.active {
+    display: flex;
+}
+
+.add-book-form p {
+    align-self: center;
+    margin-bottom: 0.75rem;
+    font-size: 1.25rem;
+    font-weight: 600;
 }
