--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f0eef1;
+    background-color: #FFFFFF;
 }
 
 .cards {
     padding: 1rem 0;
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     width: 100%;
 }
 
@@ -51,10 +51,13 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FFFFFF;
+    background-color: #fee2e2;
     padding: 1rem;
     border-radius: 0.5rem;
+}
 
+.card.have-read {
+    background-color: #dcfce7;
 }
 
 .title {
@@ -164,14 +167,22 @@ main {
     align-self: start;
 }
 
-.remove-btn {
+.remove-btn,
+.read-btn {
     margin-top: 1rem;
     width: 100%;
     font-size: 1rem;
     padding: 0.5rem;
     border-radius: 1rem;
     border-style: none;
-    background-color: #ef4444;
     color: #FFFFFF;
     font-weight: 600;
+}
+
+.remove-btn {
+    background-color: #ef4444;
+}
+
+.read-btn {
+    background-color: #64748b;
 }
